<?xml version="1.0"?>
<package format="2">
  <name>amgio_usb_cam</name>
  <version>0.0.0</version>
  <description>A helper package for pulling in the dependency to usb_cam</description>

  <maintainer email="kopp.michael@yahoo.de">Michael Kopp</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>usb_cam</depend>

</package>
